--- a/telemetry/aggregator/src/main/resources/application.properties
+++ b/telemetry/aggregator/src/main/resources/application.properties
@@ -1,3 +1,12 @@
-kafka.bootstrap.servers=localhost:9092
-kafka.consumer.auto-offset-reset=earliest
-kafka.consumer.topic.sensor-events=telemetry.sensors.v1
+server.port=8989
+
+aggregator.kafka.consumer.bootstrap.servers=localhost:9092
+aggregator.kafka.consumer.group.id=sensor-aggregator
+aggregator.kafka.consumer.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+aggregator.kafka.consumer.value.deserializer=ru.yandex.practicum.aggregator.deserializer.SensorEventDeserializer
+aggregator.kafka.consumer.auto-offset-reset=earliest
+aggregator.kafka.consumer.topic.sensor-events=telemetry.sensors.v1
+
+aggregator.kafka.producer.bootstrap.servers=localhost:9092
+aggregator.kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+aggregator.kafka.producer.value.serializer=ru.yandex.practicum.kafka.serializer.GeneralAvroSerializer
