--- a/telemetry/aggregator/src/main/resources/application.properties
+++ b/telemetry/aggregator/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8989
+grpc.server.port=9099
 
 aggregator.kafka.consumer.bootstrap.servers=localhost:9092
 aggregator.kafka.consumer.group.id=sensor-aggregator
@@ -10,3 +11,6 @@ aggregator.kafka.consumer.topic.sensor-events=telemetry.sensors.v1
 aggregator.kafka.producer.bootstrap.servers=localhost:9092
 aggregator.kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 aggregator.kafka.producer.value.serializer=ru.yandex.practicum.kafka.serializer.GeneralAvroSerializer
+
+topic.hub-events=telemetry.hubs.v1
+topic.sensor-events=telemetry.sensors.v1
