--- a/telemetry/analyzer/src/main/resources/application.properties
+++ b/telemetry/analyzer/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.sql.init.schema-locations=classpath:schema.sql
 
 # gRPC client configuration for hub-router
 grpc.client.hub-router.address=static://localhost:59090
-grpc.client.hub-router.negotiation.type=plaintext
+grpc.client.hub-router.negotiation-type=plaintext
 grpc.client.hub-router.enable.keep.alive=true
 grpc.client.hub-router.keep.alive.time=30s
 grpc.client.hub-router.keep.alive.timeout=5s
