добавление конфиг сервера

--- a/telemetry/analyzer/src/main/resources/application.properties
+++ b/telemetry/analyzer/src/main/resources/application.properties
@@ -1,44 +1,5 @@
-# DataSource configuration
-spring.datasource.url=jdbc:postgresql://localhost:6543/telemetry_analyzer
-spring.datasource.username=analyzer
-spring.datasource.password=12345
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-spring.sql.init.schema-locations=classpath:schema.sql
-
-# gRPC client configuration for hub-router
-grpc.client.hub-router.address=static://localhost:59090
-grpc.client.hub-router.negotiation-type=plaintext
-grpc.client.hub-router.enable.keep.alive=true
-grpc.client.hub-router.keep.alive.time=30s
-grpc.client.hub-router.keep.alive.timeout=5s
-grpc.client.hub-router.max.inbound.message.size=4MB
-
-# Hub Event Consumer
-analyzer.kafka.hub-consumer.bootstrap.servers=localhost:9092
-analyzer.kafka.hub-consumer.group.id=hub-analyzer-group
-analyzer.kafka.hub-consumer.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-analyzer.kafka.hub-consumer.value.deserializer=ru.yandex.practicum.analyzer.deserializer.HubEventDeserializer
-analyzer.kafka.hub-consumer.enable.auto.commit=false
-analyzer.kafka.hub-consumer.auto.offset.reset=earliest
-analyzer.kafka.hub-consumer.max.poll.records=100
-analyzer.kafka.hub-consumer.fetch.max.bytes=3072000
-analyzer.kafka.hub-consumer.max.partition.fetch.bytes=307200
-
-# Sensors Snapshot Consumer
-analyzer.kafka.snapshot-consumer.bootstrap.servers=localhost:9092
-analyzer.kafka.snapshot-consumer.group.id=snapshot-analyzer-group
-analyzer.kafka.snapshot-consumer.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-analyzer.kafka.snapshot-consumer.value.deserializer=ru.yandex.practicum.analyzer.deserializer.SensorsSnapshotDeserializer
-analyzer.kafka.snapshot-consumer.enable.auto.commit=false
-analyzer.kafka.snapshot-consumer.auto.offset.reset=earliest
-analyzer.kafka.snapshot-consumer.max.poll.records=100
-analyzer.kafka.snapshot-consumer.fetch.max.bytes=3072000
-analyzer.kafka.snapshot-consumer.max.partition.fetch.bytes=307200
-
-kafka.topic.hub=telemetry.hubs.v1
-kafka.topic.snapshot=telemetry.snapshots.v1
+spring.application.name=analyzer
+spring.config.import=configserver:http://localhost:8888
+cloud.config.fail-fast=true
+cloud.config.retry.useRandomPolicy=true
+cloud.config.retry.max-interval=6000
