--- a/telemetry/collector/src/main/resources/application.properties
+++ b/telemetry/collector/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-kafka.bootstrap.servers=localhost:9092
-kafka.acks=all
-kafka.retries=3
-kafka.topics.hub-events=telemetry.hubs.v1
-kafka.topics.sensor-events=telemetry.sensors.v1
-
-grpc.server.port=59091
+spring.application.name=collector
+spring.config.import=configserver:http://localhost:8888
+cloud.config.fail-fast=true
+cloud.config.retry.useRandomPolicy=true
+cloud.config.retry.max-interval=6000
