--- a/infra/config-server/src/main/resources/application.properties
+++ b/infra/config-server/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.application.name=config-server
 spring.profiles.active=native
 spring.cloud.config.server.native.searchLocations=classpath:config/telemetry/{application}
-server.port=8888
+server.port=0
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+spring.application.name=config-server
