--- a/infra/config-server/src/main/resources/config/telemetry/analyzer/application.properties
+++ b/infra/config-server/src/main/resources/config/telemetry/analyzer/application.properties
@@ -11,12 +11,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.sql.init.schema-locations=classpath:schema.sql
 
 # gRPC client configuration for hub-router
-grpc.client.hub-router.address=static://localhost:59090
+grpc.client.hub-router.address=discovery:///hub-router
 grpc.client.hub-router.negotiation-type=plaintext
 grpc.client.hub-router.enable.keep.alive=true
 grpc.client.hub-router.keep.alive.time=30s
 grpc.client.hub-router.keep.alive.timeout=5s
 grpc.client.hub-router.max.inbound.message.size=4MB
+
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname:localhost}:${eureka.instance.port:8761}/eureka/
 
 # Hub Event Consumer
 analyzer.kafka.hub-consumer.bootstrap.servers=localhost:9092
