--- a/telemetry/aggregator/src/main/resources/application.properties
+++ b/telemetry/aggregator/src/main/resources/application.properties
@@ -1,5 +1,8 @@
+spring.config.import=configserver:
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=config-server
 spring.application.name=aggregator
-spring.config.import=configserver:http://localhost:8888
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname:localhost}:${eureka.instance.port:8761}/eureka/
 cloud.config.fail-fast=true
 cloud.config.retry.useRandomPolicy=true
 cloud.config.retry.max-interval=6000
