--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,10 @@
         <module>commerce</module>
         <module>infra/config-server</module>
         <module>infra/discovery-server</module>
+        <module>commerce/shopping-store</module>
+        <module>commerce/interaction-api</module>
+        <module>commerce/shopping-cart</module>
+        <module>commerce/warehouse</module>
     </modules>
 
     <properties>
