--- a/infra/config-server/src/main/resources/application.properties
+++ b/infra/config-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.profiles.active=native
-spring.cloud.config.server.native.searchLocations=classpath:config/telemetry/{application}
+spring.cloud.config.server.native.searchLocations=classpath:config/telemetry/{application}, classpath:config/commerce/{application}
 server.port=0
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
