--- a/commerce/warehouse/pom.xml
+++ b/commerce/warehouse/pom.xml
@@ -91,7 +91,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>ru.yandex.practicum.shopping.cart.WarehouseApplication</mainClass>
+                    <mainClass>ru.yandex.practicum.warehouse.WarehouseApplication</mainClass>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
