исправление замечаний по 21 спринту

--- a/infra/config-server/src/main/resources/config/commerce/warehouse/application.properties
+++ b/infra/config-server/src/main/resources/config/commerce/warehouse/application.properties
@@ -1,6 +1,6 @@
 # DataSource configuration
-spring.datasource.url=jdbc:postgresql://localhost:6542/commerce
-spring.datasource.username=commerce
+spring.datasource.url=jdbc:postgresql://localhost:6540/warehouse
+spring.datasource.username=warehouse
 spring.datasource.password=12345
 spring.datasource.driver-class-name=org.postgresql.Driver
 
