--- a/infra/config-server/src/main/resources/config/commerce/shopping-cart/application.properties
+++ b/infra/config-server/src/main/resources/config/commerce/shopping-cart/application.properties
@@ -1,6 +1,6 @@
 # DataSource configuration
-spring.datasource.url=jdbc:postgresql://localhost:6542/commerce
-spring.datasource.username=commerce
+spring.datasource.url=jdbc:postgresql://localhost:6542/cart
+spring.datasource.username=cart
 spring.datasource.password=12345
 spring.datasource.driver-class-name=org.postgresql.Driver
 
