--- a/infra/config-server/src/main/resources/application.properties
+++ b/infra/config-server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=native
-spring.cloud.config.server.native.searchLocations=classpath:config/telemetry/{application}, classpath:config/commerce/{application}
+spring.cloud.config.server.native.searchLocations=classpath:config/telemetry/{application}, \
+  classpath:config/commerce/{application}, classpath:config/infra/{application}
 server.port=0
-
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 spring.application.name=config-server
